--- a/Includes/Bibliography/_ref_1980s.bib
+++ b/Includes/Bibliography/_ref_1980s.bib
@@ -32,6 +32,17 @@
   publisher={ACS Publications}
 }
 
+@article{gelbard1980sectional,
+	title={Sectional representations for simulating aerosol dynamics},
+	author={Gelbard, Fred and Tambour, Yoram and Seinfeld, John H},
+	journal={Journal of colloid and interface science},
+	volume={76},
+	number={2},
+	pages={541--556},
+	year={1980},
+	publisher={Elsevier}
+}
+
 @inproceedings{miller1985calculations,
   title={Calculations of the dimerization of aromatic hydrocarbons: Implications for soot formation},
   author={Miller, J Houston and Smyth, Kermit C and Mallard, W Gary},
