--- a/Includes/Bibliography/_ref_2004.bib
+++ b/Includes/Bibliography/_ref_2004.bib
@@ -51,3 +51,13 @@
   publisher={Wiley Online Library}
 }
 
+@article{park2004novel,
+	title={A novel fixed-sectional model for the formation and growth of aerosol agglomerates},
+	author={Park, SH and Rogak, SN},
+	journal={Journal of Aerosol Science},
+	volume={35},
+	number={11},
+	pages={1385--1404},
+	year={2004},
+	publisher={Elsevier}
+}
