--- a/Includes/Bibliography/_ref_2023.bib
+++ b/Includes/Bibliography/_ref_2023.bib
@@ -69,3 +69,11 @@
   year={2023},
   publisher={Elsevier}
 }
+
+@Misc{ZDV2023,
+  author  = {Zhang, Yue and Dong, Wendi and Vandewalle, Laurien and Xu, Rui and Smith, Gregory and Wang, Hai},
+  title   = {Foundational {Fuel} {Chemistry} {Model} {Version} 2.0 ({FFCM}-2)},
+  journal = {FFCM-2 website},
+  url     = "https://web.stanford.edu/group/haiwanglab/FFCM2",
+  year    = {2023},
+}
