--- a/Includes/Bibliography/_ref_2024.bib
+++ b/Includes/Bibliography/_ref_2024.bib
@@ -8,3 +8,13 @@
   year={2024},
   publisher={Elsevier}
 }
+
+@article{rosner2024techno,
+	title={Techno-economic and carbon dioxide emission assessment of carbon black production},
+	author={Rosner, Fabian and Bhagde, Trisha and Slaughter, Daniel S and Zorba, Vassilia and Stokes-Draut, Jennifer},
+	journal={Journal of Cleaner Production},
+	volume={436},
+	pages={140224},
+	year={2024},
+	publisher={Elsevier}
+}
