--- a/Includes/acknowledgements.tex
+++ b/Includes/acknowledgements.tex
@@ -1,3 +1,3 @@
 \section{Acknowledgements}
 
-The research leading to these results has received funding from the Canada Research Chair Program (Grant \# CRC-2019-232527) and the Natural Sciences and Engineering Research Council of Canada (Discovery Grant \# RGPIN-2019-06330 and -Early Career Supplemental Award \# DGECR-2019-00220), Monolith Materials and MITACS.
+The research leading to these results has received funding from the Canada Research Chair Program (Grant \#CRC-2019-232527) and the Natural Sciences and Engineering Research Council of Canada (Discovery Grant \#RGPIN-2019-06330 and -Early Career Supplemental Award \#DGECR-2019-00220  and Alliance \#576739-2022), Monolith Materials and MITACS (IT28731).
