--- a/Includes/nomenclature.tex
+++ b/Includes/nomenclature.tex
@@ -4,7 +4,7 @@
 \nomenclature[a]{DEM}{Discrete Element Modelling}
 \nomenclature[a]{HACA}{Hydrogen abstraction carbon addition}
 
-\nomenclature[c]{$k_B$}{Boltzmann constant \nomunit{$1.3806488 \times 10^{-23}$ \si{\metre^2 \kg \per \second^2-K}}}
+\nomenclature[c]{$k_B$}{Boltzmann constant \nomunit{$1.3806488 \times 10^{-23}$ \si{J \per K}}}
 \nomenclature[c]{$Av$}{Avogadro's number\nomunit{6.02214076 $\times 10^{23}$ \si{1 / mol}}}
 
 \nomenclature[e]{$h$}{Entalpy\nomunit{\si{J\per\kg}}}
@@ -37,7 +37,7 @@
 \nomenclature[e]{$Kn$}{Knudsen number \nomunit{\si{-}}}
 
 \nomenclature[g]{$\rho$}{Density\nomunit{\si{\kg\per\metre^3}}}
-\nomenclature[g]{$\varphi$}{Soot volume fraction based on reator volume\nomunit{\si{\kg\per\metre^3}}}
+\nomenclature[g]{$\varphi$}{Soot volume fraction based on reactor volume\nomunit{\si{\kg\per\metre^3}}}
 \nomenclature[g]{$f_v$}{Soot volume fraction based on gas volume\nomunit{\si{\metre\cubed\per\metre\cubed}}}
 %\nomenclature[g]{$\rho_{soot}$}{Soot density\nomunit{\si{\kg\per\metre^3}}}
 \nomenclature[g]{$\nu$}{Gas kinematic viscosity\nomunit{\si{\metre^2\per\second}}}
