--- a/Includes/results/shocktube.tex
+++ b/Includes/results/shocktube.tex
@@ -1,13 +1,13 @@
-\subsubsection{Methane pyrolysis in shock-tube}
+\subsection{Methane pyrolysis in shock-tube}
 
 The pyrolysis of a 5\% $\mathrm{CH_4}$--Ar mixture was investigated using the CPR model over a post-shock temperature range ${T_5} = 1800$--$3000$ K and a pressure range $\mathrm{P_5} = 4.7$--$7.1$ bar. Since $\mathrm{P_5}$ was not specified for each experiment (characterized by a given $\mathrm{T_5}$), we assumed a linear increase of $\mathrm{P_5}$ with ${T_5}$ within the specified range~\citep{agafonov2016unified}. The Caltech mechanism was used to describe gas-phase chemistry. Inception and PAH adsorption rates were adjusted using $\eta_{inc}$ and $\eta_{ads}$, respectively, to match the predicted Carbon Yield, CY, at $t = 1.5$ ms with light extinction measurements at $\lambda = 632$ nm over the studied ${T_5}$ and ${P_5}$ ranges~\citep{agafonov2016unified}. The measured CY was retrieved from the reported product CY$\times$E(m). There are uncertainties in CY calculated using this technique due to variability in E(m). It is common to use the E(m) of mature soot, which may not be accurate for soot particles formed in a shock tube over short residence times ($\approx 2$ ms). E(m) increases significantly with particle size, composition, and maturity. For example, E(m) varies from 0.05 to 0.25 as the primary particle diameter grows to 20 nm within 1.6 ms during acetylene pyrolysis. However, there remains a substantial gap in our quantitative understanding of evolving E(m) values for soot. We considered the reported variability of E(m) in the literature, ranging from 0.174~\citep{lee1981optical} to 0.37~\citep{agafonov2011soot}.
 
-A parametric study was conducted on $\eta_{inc}$ and $\eta_{ads}$ using a grid search approach. Each factor was varied across 11 logarithmically spaced values from $10^{-4}$ to 1, resulting in 99 simulation cases per data point (792 simulations total). Combinations of $\eta_{inc}$ and $\eta_{ads}$ were ranked by the average relative error across all data points to identify the set minimizing the CY prediction error. Figure~\ref{fig:shockagof_yielderror_cpr} shows a heat map of the mean relative error, normalized by the maximum value, for the Reactive Dimerization model. The largest error occurs for the combination of maximum inception ($\eta_{inc} = 1$ or $\log_{10}(\eta_{inc}) = 0$) and minimum adsorption ($\eta_{ads} = 10^{-4}$ or $\log_{10}(\eta_{ads}) = -4$). The region of lowest normalized error (less than 5\%) is outlined in blue and includes a broad set of adjustment factor combinations that accurately predict CY but may affect predicted soot morphology. To better understand these effects, we adopted a multi-step approach: (i) simulations without soot were performed to isolate gas-phase chemistry and $\mathrm{C_2H_2}$ formation; (ii) inception models were optimized using equal adjustment factors $\eta_{inc} = \eta_{ads}$; and (iii) separate optimizations were performed for minimum adsorption ($\eta_{ads} = 10^{-4}$) and minimum inception ($\eta_{inc} = 10^{-4}$), denoted as \textit{Min Ads} and \textit{Min Inc}, respectively.
+A parametric study was conducted on $\eta_{inc}$ and $\eta_{ads}$ using a grid search approach. Each factor was varied across 11 logarithmically spaced values from $10^{-4}$ to 1, resulting in 121 simulation cases per data point (847 simulations in total). Combinations of $\eta_{inc}$ and $\eta_{ads}$ were ranked by the average relative error across all data points (over the entire studied $T_5$ range) to identify the set of adjustment factors that minimized the CY prediction error. Figure~\ref{fig:shockagof_yielderror_cpr} shows a heat map of the mean relative error, normalized by the maximum value, for all inception models. The largest error occurs for the combination of maximum inception ($\eta_{inc} = 1$ or $\log_{10}(\eta_{inc}) = 0$) and minimum adsorption ($\eta_{ads} = 10^{-4}$ or $\log_{10}(\eta_{ads}) = -4$). The region of lowest normalized error (less than 5\%) (outlined in blue in Figure~\ref{fig:shockagof_yielderror_cpr}) includes a broad set of adjustment factor combinations that enable the model to accurately predict CY. Among those, three types of combinations are of interest: where (i) the minimum inception flux (i.e., $\eta_{inc} = 10^{-4}$), (ii) the minimum PAH adsorption rate (i.e., $\eta_{ads} = 10^{-4}$) (iii) the equally scaled inception flux and the PAH adsorption rate  ($\eta_{inc}\approx\eta_{ads}$). All three combinations result in low CY prediction error but may affect predicted soot morphology. To better understand these effects, we adopted a multi-step approach: (i) simulations without soot were performed to isolate gas-phase chemistry and $\mathrm{C_2H_2}$ formation; (ii) inception models were optimized using equal adjustment factors $\eta_{inc} = \eta_{ads}$; and (iii) separate optimizations were performed for minimum adsorption ($\eta_{ads} = 10^{-4}$) and minimum inception ($\eta_{inc} = 10^{-4}$), denoted as \textit{Min Ads} and \textit{Min Inc}, respectively.
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.5\textwidth]{Figures/Results/Shocktube/Agafonov2016_cpr/5CH4_norm_yield_error_readim.pdf}
-	\caption{The relative error of CY normalized by the maximum value at $t=$1.5 ms for 5\%~$\mathrm{CH_4}$ obtained using Caltech mechanism and Reactive Dimerization.}
+	\includegraphics[width=0.8\textwidth]{Figures/Results/Shocktube/Agafonov2016_cpr/5CH4_norm_yield_error_all.pdf}
+	\caption{The relative error of CY normalized by the maximum value at $t=$1.5 ms for 5\%~$\mathrm{CH_4}$ obtained using Caltech mechanism and different inception models.}
 	\label{fig:shockagof_yielderror_cpr} 
 \end{figure}
 
