--- a/Includes/theory.tex
+++ b/Includes/theory.tex
@@ -1078,7 +1078,7 @@ The rate of release of H radicals into the gas mixture due to surface growth is:
 
 \renewcommand{\arraystretch}{1.5}
 \begin{table}
-	\caption{Rate coefficients for the various surface reactions in Arrhenius form $\mathrm{k=AT^n\cdot e^{-E/RT}}$}
+	\caption{Arrhenius rate coefficients of the various surface reactions in HACA~\citep{appel2000kinetic}, $\mathrm{k=AT^n\cdot e^{-E/RT}}$}
 	\label{tab:HACA}
 	\centering
 	\begin{tabular}{l l l l l l}
