--- a/Includes/Bibliography/all.bib
+++ b/Includes/Bibliography/all.bib
@@ -1,35 +1,3 @@
-@article{rosner2024techno,
-	title={Techno-economic and carbon dioxide emission assessment of carbon black production},
-	author={Rosner, Fabian and Bhagde, Trisha and Slaughter, Daniel S and Zorba, Vassilia and Stokes-Draut, Jennifer},
-	journal={Journal of Cleaner Production},
-	volume={436},
-	pages={140224},
-	year={2024},
-	publisher={Elsevier}
-}
-
-@article{park2004novel,
-	title={A novel fixed-sectional model for the formation and growth of aerosol agglomerates},
-	author={Park, SH and Rogak, SN},
-	journal={Journal of Aerosol Science},
-	volume={35},
-	number={11},
-	pages={1385--1404},
-	year={2004},
-	publisher={Elsevier}
-}
-
-@article{gelbard1980sectional,
-	title={Sectional representations for simulating aerosol dynamics},
-	author={Gelbard, Fred and Tambour, Yoram and Seinfeld, John H},
-	journal={Journal of colloid and interface science},
-	volume={76},
-	number={2},
-	pages={541--556},
-	year={1980},
-	publisher={Elsevier}
-}
-
 @misc{fuchs1965mechanics,
   title={The mechanics of aerosols},
   author={Fuchs, Nikolaj A and Daisley, RE and Fuchs, Marina and Davies, CN and Straumanis, ME},
@@ -159,6 +127,17 @@
   pages={3714--3725},
   year={1985},
   publisher={ACS Publications}
+}
+
+@article{gelbard1980sectional,
+	title={Sectional representations for simulating aerosol dynamics},
+	author={Gelbard, Fred and Tambour, Yoram and Seinfeld, John H},
+	journal={Journal of colloid and interface science},
+	volume={76},
+	number={2},
+	pages={541--556},
+	year={1980},
+	publisher={Elsevier}
 }
 
 @inproceedings{miller1985calculations,
@@ -858,7 +837,16 @@
   publisher={Wiley Online Library}
 }
 
-
+@article{park2004novel,
+	title={A novel fixed-sectional model for the formation and growth of aerosol agglomerates},
+	author={Park, SH and Rogak, SN},
+	journal={Journal of Aerosol Science},
+	volume={35},
+	number={11},
+	pages={1385--1404},
+	year={2004},
+	publisher={Elsevier}
+}
 @article{park2005influence,
   title={Influence of surface characteristics of carbon blacks on cure and mechanical behaviors of rubber matrix compoundings},
   author={Park, Soo-Jin and Seo, Min-Kang and Nah, Changwoon},
@@ -2540,6 +2528,15 @@
   year={2023},
   publisher={Elsevier}
 }
+
+@Misc{ZDV2023,
+  author  = {Zhang, Yue and Dong, Wendi and Vandewalle, Laurien and Xu, Rui and Smith, Gregory and Wang, Hai},
+  title   = {Foundational {Fuel} {Chemistry} {Model} {Version} 2.0 ({FFCM}-2)},
+  journal = {FFCM-2 website},
+  url     = "https://web.stanford.edu/group/haiwanglab/FFCM2",
+  year    = {2023},
+}
+
 @article{hellmuth2024role,
   title={The role of C3 and C4 species in forming naphthalene in counterflow diffusion flames},
   author={Hellmuth, Maximilian and Langer, Raymond and Meraviglia, Anita and Beeckmann, Joachim and Pitsch, Heinz},
@@ -2549,6 +2546,16 @@
   pages={105620},
   year={2024},
   publisher={Elsevier}
+}
+
+@article{rosner2024techno,
+	title={Techno-economic and carbon dioxide emission assessment of carbon black production},
+	author={Rosner, Fabian and Bhagde, Trisha and Slaughter, Daniel S and Zorba, Vassilia and Stokes-Draut, Jennifer},
+	journal={Journal of Cleaner Production},
+	volume={436},
+	pages={140224},
+	year={2024},
+	publisher={Elsevier}
 }
 @misc{HansonGroupShockTube,
   title = {Hanson Research Group Shock Tubes},
