--- a/Includes/title.tex
+++ b/Includes/title.tex
@@ -1,5 +1,5 @@
 	\title{\renewcommand\baselinestretch{1}\bf
-		Omnisoot: an object-oriented computational package for the simulation of the gas phase synthesis of Carbon Black
+		Omnisoot: an object oriented package for process design of gas phase synthesis of Carbon black
 		}
 	\renewcommand\baselinestretch{0.8}
 	\author{
@@ -12,7 +12,7 @@
 	\renewcommand\baselinestretch{1.3}
 	
 	\begin{abstract}
-	A computational tool, \textit{omnisoot}, was developed utilizing the chemical kinetics capabilities of Cantera to model the formation of carbonaceous nanoparticles, such as soot and carbon black (CB), from the reactions of gaseous hydrocarbons. Omnisoot integrates constant volume, constant pressure, perfectly stirred, and plug flow reactor models with four inception models from the literature, as well as two particles dynamics models: a monodisperse (MPBM) and a sectional population balance models (SPBM). This package serves as an integrated process design tool to predict soot mass, morphology, and composition under varying process conditions. The modeling approach accounts for soot inception, surface growth, and oxidation, coupled with detailed gas-phase chemistry, to close the mass and energy balances of the gas-particle system; subsequently, soot and gas-phase chemistry are linked to the particle dynamics models that consider the evolving fractal-like structure of soot agglomerates. The developed tool was employed to highlight the similarities and differences among the implemented inception models in predicting soot mass, morphology, and size distribution for three use-cases: methane pyrolysis in a shock tube, ethylene pyrolysis in a flow reactor, and ethylene combustion in a perfectly stirred reactor. The simulations of 5\% $\mathrm{CH_4}$ pyrolysis in shock-tube with short residence times ($\approx1.5$ ms) demonstrated that multiple combinations of inception and surface growth rates minimized the prediction error for carbon yield but led to markedly different morphologies, emphasizing the need for measured data on soot morphology to constrain inception and surface growth rates. The comparison of simulation results in a pyrolysis flow reactor at three different flow rates suggested that only irreversible models can predict bimodality in particle size distribution. Moreover, the contributions of inception and surface growth to the total soot mass were used as determining factors in soot morphology. %Omnisoot is a robust tool that can help elucidate and reduce uncertainties in the simulation of soot formation from various sources and estimate the range of inception and surface growth rates to accurately predict soot yield, size, and morphology.
+	A computational tool, omnisoot, was developed utilizing the chemical kinetics capabilities of Cantera to model the formation of carbonaceous nanoparticles, such as soot and carbon black (CB), from the reactions of gaseous hydrocarbons. Omnisoot integrates constant volume, constant pressure, perfectly stirred, and plug flow reactor models with four inception models from the literature, as well as two particles dynamics models: a monodisperse (MPBM) and a sectional population balance models (SPBM). This package serves as an integrated process design tool to predict soot mass, morphology, and composition under varying process conditions. The modeling approach accounts for soot inception, surface growth, and oxidation, coupled with detailed gas-phase chemistry, to close the mass and energy balances of the gas-particle system; subsequently, soot and gas-phase chemistry are linked to the particle dynamics models that consider the evolving fractal-like structure of soot agglomerates. The developed tool was employed to highlight the similarities and differences among the implemented inception models in predicting soot mass, morphology, and size distribution for three use-cases: methane pyrolysis in a shock tube, ethylene pyrolysis in a flow reactor, and ethylene combustion in a perfectly stirred reactor. The simulations of 5\% $\mathrm{CH_4}$ pyrolysis in shock-tube with short residence times ($\approx1.5$ ms) demonstrated that multiple combinations of inception and surface growth rates minimized the prediction error for carbon yield but led to markedly different morphologies, emphasizing the need for measured data on soot morphology to constrain inception and surface growth rates. The comparison of simulation results in a pyrolysis flow reactor at three different flow rates suggested that only irreversible models can predict bimodality in particle size distribution. Moreover, the contributions of inception and surface growth to the total soot mass were used as determining factors in soot morphology. %Omnisoot is a robust tool that can help elucidate and reduce uncertainties in the simulation of soot formation from various sources and estimate the range of inception and surface growth rates to accurately predict soot yield, size, and morphology.
 		
 	\end{abstract}
 	
